# yt-dlw

./: .gitignore  Cargo.toml  README.md  docker-compose.yml  pyproject.toml  requirements.txt  yt_dlw.py
api/: config.py  main.py  requirements.txt  server.py  tasks.py
app/: package-lock.json  package.json  svelte.config.js  vite.config.js
app/src/: app.html  app.postcss
app/src/lib/Item/: Item.svelte
app/src/lib/Navigation/: Navigation.svelte
app/src/routes/: +layout.svelte  +page.svelte
app/src/routes/download/: +page.server.js
docker/: Dockerfile-api  Dockerfile-app
python/: yt_dlw.py
src/: main.rs  ydl_service.rs
