[package]
name = "yt-dlw-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
serde = "1"
actix = "0.13.0"
actix-codec = "0.5.1"
actix-web = "4"
actix-web-actors = "4"
apalis = { version = "0.4", features = ["redis"] }
awc = "3.1.1"
env_logger = "0.10"
futures = "0.3"
futures-util = "0.3.0"
serde_json = "1"
log = "0.4"

[dependencies.pyo3]
version = "0.19.2"
features = ["auto-initialize"]